[tool.poetry]
name = "oauth2"
version = "0.1.0"
description = ""
authors = ["Vitaly <lildid32@mail.ru>"]
readme = "README.md"

packages = [{include="main"}]
package-mode = true

[tool.poetry.scripts]
start = "main.server:start"

[tool.pytest.ini_options]
asyncio_mode = "auto"

pythonpath = [
    "."
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
redis = "^5.2.0"
requests = "^2.32.3"
uvicorn = "^0.32.0"
pytest-asyncio = "^0.24.0"
python-dotenv = "^1.0.1"
python-decouple = "^3.8"
jwt = "^1.3.1"
pyjwt = "^2.9.0"
cryptography = "^43.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
