[tool.poetry]
name = "registration"
version = "0.1.0"
description = "registration service"
authors = ["Vitaly <lildid32@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
requests = "^2.32.3"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
